--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ on:
         - name: Checkout repository
           uses: actions/checkout@v2
         - name: Use Node.js
-          uses: actions/setup/node@v1
+          uses: actions/setup-node@v1
           with:
             node-version: '16.x',
         - name: Run Npm
