--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ on:
         - name: Use Node.js
           uses: actions/setup-node@v1
           with:
-            node-version: '16.x',
+            node-version: '16.x'
         - name: Run Npm
           run: npm
         - name: Run tests
