--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
         with:
           node-version: '16.x'
       - name: Run Npm
-        run: npm
+        run: npm install
       - name: Run tests
         run: npm run test
